@@ -31,8 +31,9 @@
 * Dev - Validation hints for WordPress.WP.EnqueuedResourceParameters.NotInFooter.
 * Dev - Validation hints for WordPress.DB.SlowDBQuery.slow_db_query_meta_query.
 * Dev - Improved code formatting.
-* Dev - Revised welcome processing sanitation to use own API functions.
+* Dev - Revised options, welcome, notice processing sanitation to use own API functions.
 * Dev - Revised posts etc. admin screens sanitation to use own API funtions, revised logic and removed unused declarations.
+* Dev - Revised users screen sanitation to use own API functions.
 
 2026-01-05 - version 3.10.0
 * Update - WordPress 6.9 compatible.
